    * export.php, libraries/display_export.lib.php, config.inc.php,
      libraries/config_import.lib.php, libraries/export/htmlexcel.php,
      libraries/export/htmlword.php, lang/*: Added Microsoft Word and Excel
      2000 export (RFE #1155122).
    * lang/czech: Updated, still missing "storage engine" translation, can't
      find any ;-).
    * lang/english: Nothing to translate here.

2005-03-06 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/relation.lib.php, /display_export.lib.php,
      /export/sql.php: native comments. For MySQL 4.1.x+ I do not display
      the "Add into comments ... Comments" choice, since they are
      part of the structure

2005-03-06 Alexander M. Turek  <me@derrabus.de>
    * lang/*.inc.php, libraries/engines/innodb.lib.php: InnoDB buffer pool
      activity statistics.
    * server_status.php: Removed InnoDB Status sub-page. It is now part of
      server_engines.php.
    * lang/*.inc.php, libraries/engines/innodb.lib.php: Buffer pool size
      indicators.
    * libraries/mysql_charsets.lib.php: Don't check the character set of the
      virtual database "information_schema" (MySQL 5.0).

2005-03-05 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_alter.php, tbl_addfield.php, db_datadict.php, pdf_schema.php,
      tbl_create.php, libraries/common.lib.php, /relation.lib.php,
      /database_interface.lib.php: MySQL 4.1.x native comments

2005-03-05 Alexander M. Turek  <me@derrabus.de>
    * server_engines.php, lang/*.inc.php, libraries/storage_engines.lib.php
      libraries/engines/berkeleydb.lib.php, libraries/engines/bdb.lib.php,
      libraries/engines/innobase.lib.php, libraries/innodb.lib.php,
      libraries/engines/myisam.lib.php:
      - Moved engine-specific settings into plugins;
      - Added ability to create multiple sub-pages in server_engines.php for
        a specific engine;
      - Added a few InnoDB variables. To be continued. :-)
      - New InnoDB buffer pool monitor for MySQL >= 5.0.2.
